5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1679_1100.log
== TEST (2019-04-19 19:43:33) 
-- CODE:
c = int(input("Valor da cedula: "))
if not(c=2 or c=5 or c=10 or c=20 or c=50 or c=100):
	print("Entrada:", c)
	print("Animal: invalido")

-- ERROR:
File "XXXX", line 2
    if not(c=2 or c=5 or c=10 or c=20 or c=50 or c=100):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:44:18) 
-- CODE:
c = int(input("Valor da cedula: "))
if not(c = 2 or c = 5 or c = 10 or c = 20 or c = 50 or c = 100):
	print("Entrada:", c)
	print("Animal: invalido")

-- ERROR:
File "XXXX", line 2
    if not(c = 2 or c = 5 or c = 10 or c = 20 or c = 50 or c = 100):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:45:55) 
-- CODE:
c = int(input("Valor da cedula: "))
if (c != 2 or c != 5 or c != 10 or c != 20 or c != 50 or c != 100):
	print("Entrada:", c)
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:53:15) 
-- CODE:
c = int(input("Valor da cedula: "))
if(c != 2 or c != 5 or c != 10 or c != 20 or c != 50 or c != 100):
	print("Entrada:", c)
	print("Animal: invalido")
elif(c = 2):
	print("Entrada:", c)
	print("Animal: Tartaruga")
elif(c = 5):
	print("Entrada:", c)
	print("Animal: Garca")
elif(c = 10):
	print("Entrada:", c)
	print("Animal: Arara")
elif(c = 20):
	print("Entrada:", c)
	print("Animal: Mico-leao-dourado")
elif(c = 50):
	print("Entrada:", c)
	print("Animal: Onca-pintada")
else:
	print("Entrada:", c)
	print("Animal: Garoupa")

-- ERROR:
File "XXXX", line 5
    elif(c = 2):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:53:55) 
-- CODE:
c = int(input("Valor da cedula: "))
if(c != 2 or c != 5 or c != 10 or c != 20 or c != 50 or c != 100):
	print("Entrada:", c)
	print("Animal: invalido")
elif(c = 2):
	print("Entrada:", c)
	print("Animal: Tartaruga")
elif(c = 5):
	print("Entrada:", c)
	print("Animal: Garca")
elif(c = 10):
	print("Entrada:", c)
	print("Animal: Arara")
elif(c = 20):
	print("Entrada:", c)
	print("Animal: Mico-leao-dourado")
elif(c = 50):
	print("Entrada:", c)
	print("Animal: Onca-pintada")
else:
	print("Entrada:", c)
	print("Animal: Garoupa")

-- ERROR:
File "XXXX", line 5
    elif(c = 2):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:54:18) 
-- CODE:
c = int(input("Valor da cedula: "))
if(c != 2 or c != 5 or c != 10 or c != 20 or c != 50 or c != 100):
	print("Entrada:", c)
	print("Animal: invalido")
elif(c == 2):
	print("Entrada:", c)
	print("Animal: Tartaruga")
elif(c == 5):
	print("Entrada:", c)
	print("Animal: Garca")
elif(c == 10):
	print("Entrada:", c)
	print("Animal: Arara")
elif(c == 20):
	print("Entrada:", c)
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Entrada:", c)
	print("Animal: Onca-pintada")
else:
	print("Entrada:", c)
	print("Animal: Garoupa")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:54:50) 
-- CODE:
c = int(input("Valor da cedula: "))
if(c != 2 or c != 5 or c != 10 or c != 20 or c != 50 or c != 100):
	print("Entrada:", c)
	print("Animal: invalido")
elif(c == 2):
	print("Entrada:", c)
	print("Animal: Tartaruga")
elif(c == 5):
	print("Entrada:", c)
	print("Animal: Garca")
elif(c == 10):
	print("Entrada:", c)
	print("Animal: Arara")
elif(c == 20):
	print("Entrada:", c)
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Entrada:", c)
	print("Animal: Onca-pintada")
else:
	print("Entrada:", c)
	print("Animal: Garoupa")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:55:42) 
-- CODE:
c = int(input("Valor da cedula: "))
if((c != 2) or (c != 5) or (c != 10) or (c != 20) or (c != 50) or (c != 100)):
	print("Entrada:", c)
	print("Animal: invalido")
elif(c == 2):
	print("Entrada:", c)
	print("Animal: Tartaruga")
elif(c == 5):
	print("Entrada:", c)
	print("Animal: Garca")
elif(c == 10):
	print("Entrada:", c)
	print("Animal: Arara")
elif(c == 20):
	print("Entrada:", c)
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Entrada:", c)
	print("Animal: Onca-pintada")
else:
	print("Entrada:", c)
	print("Animal: Garoupa")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:59:25) 
-- CODE:
c = int(input("Valor da cedula: "))
if((c == 2) or (c == 5) or (c == 10) or (c == 20) or (c == 50) or (c == 100)):
	if(c == 2):
		print("Entrada:", c)
		print("Animal: Tartaruga")
	elif(c == 5):
		print("Entrada:", c)
		print("Animal: Garca")
	elif(c == 10):
		print("Entrada:", c)
		print("Animal: Arara")
	elif(c == 20):
		print("Entrada:", c)
		print("Animal: Mico-leao-dourado")
	elif(c == 50):
		print("Entrada:", c)
		print("Animal: Onca-pintada")
	elif:
		print("Entrada:", c)
		print("Animal: Garoupa")
else: 
	print("Entrada:", c)
	print("Animal: invalido")

-- ERROR:
File "XXXX", line 18
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:00:03) 
-- CODE:
c = int(input("Valor da cedula: "))
if((c == 2) or (c == 5) or (c == 10) or (c == 20) or (c == 50) or (c == 100)):
	if(c == 2):
		print("Entrada:", c)
		print("Animal: Tartaruga")
	elif(c == 5):
		print("Entrada:", c)
		print("Animal: Garca")
	elif(c == 10):
		print("Entrada:", c)
		print("Animal: Arara")
	elif(c == 20):
		print("Entrada:", c)
		print("Animal: Mico-leao-dourado")
	elif(c == 50):
		print("Entrada:", c)
		print("Animal: Onca-pintada")
	elif(c == 100):
		print("Entrada:", c)
		print("Animal: Garoupa")
else: 
	print("Entrada:", c)
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 20:00:19) 
-- CODE:
c = int(input("Valor da cedula: "))
if((c == 2) or (c == 5) or (c == 10) or (c == 20) or (c == 50) or (c == 100)):
	if(c == 2):
		print("Entrada:", c)
		print("Animal: Tartaruga")
	elif(c == 5):
		print("Entrada:", c)
		print("Animal: Garca")
	elif(c == 10):
		print("Entrada:", c)
		print("Animal: Arara")
	elif(c == 20):
		print("Entrada:", c)
		print("Animal: Mico-leao-dourado")
	elif(c == 50):
		print("Entrada:", c)
		print("Animal: Onca-pintada")
	elif(c == 100):
		print("Entrada:", c)
		print("Animal: Garoupa")
else: 
	print("Entrada:", c)
	print("Animal: invalido")

-- EXECUTION TIME:
0.206854
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 20:00:50) 
-- CODE:
c = int(input("Valor da cedula: "))
if((c == 2) and (c == 5) and (c == 10) and (c == 20) and (c == 50) and (c == 100)):
	if(c == 2):
		print("Entrada:", c)
		print("Animal: Tartaruga")
	elif(c == 5):
		print("Entrada:", c)
		print("Animal: Garca")
	elif(c == 10):
		print("Entrada:", c)
		print("Animal: Arara")
	elif(c == 20):
		print("Entrada:", c)
		print("Animal: Mico-leao-dourado")
	elif(c == 50):
		print("Entrada:", c)
		print("Animal: Onca-pintada")
	elif(c == 100):
		print("Entrada:", c)
		print("Animal: Garoupa")
else: 
	print("Entrada:", c)
	print("Animal: invalido")

-- EXECUTION TIME:
0.186998
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 20:02:26) 
-- CODE:
c = int(input("Valor da cedula: "))
if((c == 2) and (c == 5) and (c == 10) and (c == 20) and (c == 50) and (c == 100)):
	if(c == 2):
		print("Entrada:", c)
		print("Animal: Tartaruga")
	elif(c == 5):
		print("Entrada:", c)
		print("Animal: Garça")
	elif(c == 10):
		print("Entrada:", c)
		print("Animal: Arara")
	elif(c == 20):
		print("Entrada:", c)
		print("Animal: Mico-leao-dourado")
	elif(c == 50):
		print("Entrada:", c)
		print("Animal: Onca-pintada")
	elif(c == 100):
		print("Entrada:", c)
		print("Animal: Garoupa")
else: 
	print("Entrada:", c)
	print("Animal: invalido")

-- EXECUTION TIME:
0.149521
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:06:46) 
-- CODE:
c = input("Valor da cedula: ")
if((c == 2) or (c == 5) or (c == 10) or (c == 20) or (c == 50) or (c == 100)):
	if(c == 2):
		print("Entrada:", int(c))
		print("Animal: Tartaruga")
	elif(c == 5):
		print("Entrada:", int(c))
		print("Animal: Garça")
	elif(c == 10):
		print("Entrada:", int(c))
		print("Animal: Arara")
	elif(c == 20):
		print("Entrada:", int(c))
		print("Animal: Mico-leao-dourado")
	elif(c == 50):
		print("Entrada:", int(c))
		print("Animal: Onca-pintada")
	elif(c == 100):
		print("Entrada:", int(c))
		print("Animal: Garoupa")
else: 
	print("Entrada:", int(c))
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:08:58) 
-- CODE:
c = input("Valor da cedula: ")
if((c == 2) and (c == 5) and (c == 10) and (c == 20) and (c == 50) and (c == 100)):
	if(c == 2):
		print("Entrada:", int(c))
		print("Animal: Tartaruga")
	elif(c == 5):
		print("Entrada:", int(c))
		print("Animal: Garça")
	elif(c == 10):
		print("Entrada:", int(c))
		print("Animal: Arara")
	elif(c == 20):
		print("Entrada:", int(c))
		print("Animal: Mico-leao-dourado")
	elif(c == 50):
		print("Entrada:", int(c))
		print("Animal: Onca-pintada")
	elif(c == 100):
		print("Entrada:", int(c))
		print("Animal: Garoupa")
else: 
	print("Entrada:", int(c))
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 20:09:20) 
-- CODE:
c = input("Valor da cedula: ")
if((c == 2) and (c == 5) and (c == 10) and (c == 20) and (c == 50) and (c == 100)):
	if(c == 2):
		print("Entrada:", int(c))
		print("Animal: Tartaruga")
	elif(c == 5):
		print("Entrada:", int(c))
		print("Animal: Garça")
	elif(c == 10):
		print("Entrada:", int(c))
		print("Animal: Arara")
	elif(c == 20):
		print("Entrada:", int(c))
		print("Animal: Mico-leao-dourado")
	elif(c == 50):
		print("Entrada:", int(c))
		print("Animal: Onca-pintada")
	elif(c == 100):
		print("Entrada:", int(c))
		print("Animal: Garoupa")
else: 
	print("Entrada:", int(c))
	print("Animal: invalido")

-- EXECUTION TIME:
0.123187
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:10:16) 
-- CODE:
c = input("Valor da cedula: ")
if((c == 2) and (c == 5) and (c == 10) and (c == 20) and (c == 50) and (c == 100)):
	if(c == 2):
		print("Entrada:", int(c))
		print("Animal: Tartaruga")
	elif(c == 5):
		print("Entrada:", int(c))
		print("Animal: Garça")
	elif(c == 10):
		print("Entrada:", int(c))
		print("Animal: Arara")
	elif(c == 20):
		print("Entrada:", int(c))
		print("Animal: Mico-leao-dourado")
	elif(c == 50):
		print("Entrada:", int(c))
		print("Animal: Onca-pintada")
	elif(c == 100):
		print("Entrada:", int(c))
		print("Animal: Garoupa")
else: 
	print("Entrada:", int(c))
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:10:25) 
-- CODE:
c = input("Valor da cedula: ")
if((c == 2) and (c == 5) and (c == 10) and (c == 20) and (c == 50) and (c == 100)):
	if(c == 2):
		print("Entrada:", int(c))
		print("Animal: Tartaruga")
	elif(c == 5):
		print("Entrada:", int(c))
		print("Animal: Garça")
	elif(c == 10):
		print("Entrada:", int(c))
		print("Animal: Arara")
	elif(c == 20):
		print("Entrada:", int(c))
		print("Animal: Mico-leao-dourado")
	elif(c == 50):
		print("Entrada:", int(c))
		print("Animal: Onca-pintada")
	elif(c == 100):
		print("Entrada:", int(c))
		print("Animal: Garoupa")
else: 
	print("Entrada:", int(c))
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:10:58) 
-- CODE:
c = input("Valor da cedula: ")
if((c == 2) or (c == 5) or (c == 10) or (c == 20) or (c == 50) or (c == 100)):
	if(c == 2):
		print("Entrada:", int(c))
		print("Animal: Tartaruga")
	elif(c == 5):
		print("Entrada:", int(c))
		print("Animal: Garça")
	elif(c == 10):
		print("Entrada:", int(c))
		print("Animal: Arara")
	elif(c == 20):
		print("Entrada:", int(c))
		print("Animal: Mico-leao-dourado")
	elif(c == 50):
		print("Entrada:", int(c))
		print("Animal: Onca-pintada")
	elif(c == 100):
		print("Entrada:", int(c))
		print("Animal: Garoupa")
else: 
	print("Entrada:", int(c))
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:11:05) 
-- CODE:
c = input("Valor da cedula: ")
if((c == 2) or (c == 5) or (c == 10) or (c == 20) or (c == 50) or (c == 100)):
	if(c == 2):
		print("Entrada:", int(c))
		print("Animal: Tartaruga")
	elif(c == 5):
		print("Entrada:", int(c))
		print("Animal: Garça")
	elif(c == 10):
		print("Entrada:", int(c))
		print("Animal: Arara")
	elif(c == 20):
		print("Entrada:", int(c))
		print("Animal: Mico-leao-dourado")
	elif(c == 50):
		print("Entrada:", int(c))
		print("Animal: Onca-pintada")
	elif(c == 100):
		print("Entrada:", int(c))
		print("Animal: Garoupa")
else: 
	print("Entrada:", int(c))
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 20:11:11) 
-- CODE:
c = input("Valor da cedula: ")
if((c == 2) or (c == 5) or (c == 10) or (c == 20) or (c == 50) or (c == 100)):
	if(c == 2):
		print("Entrada:", int(c))
		print("Animal: Tartaruga")
	elif(c == 5):
		print("Entrada:", int(c))
		print("Animal: Garça")
	elif(c == 10):
		print("Entrada:", int(c))
		print("Animal: Arara")
	elif(c == 20):
		print("Entrada:", int(c))
		print("Animal: Mico-leao-dourado")
	elif(c == 50):
		print("Entrada:", int(c))
		print("Animal: Onca-pintada")
	elif(c == 100):
		print("Entrada:", int(c))
		print("Animal: Garoupa")
else: 
	print("Entrada:", int(c))
	print("Animal: invalido")

-- EXECUTION TIME:
0.133708
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:11:14) 
-- CODE:
c = input("Valor da cedula: ")
if((c == 2) or (c == 5) or (c == 10) or (c == 20) or (c == 50) or (c == 100)):
	if(c == 2):
		print("Entrada:", int(c))
		print("Animal: Tartaruga")
	elif(c == 5):
		print("Entrada:", int(c))
		print("Animal: Garça")
	elif(c == 10):
		print("Entrada:", int(c))
		print("Animal: Arara")
	elif(c == 20):
		print("Entrada:", int(c))
		print("Animal: Mico-leao-dourado")
	elif(c == 50):
		print("Entrada:", int(c))
		print("Animal: Onca-pintada")
	elif(c == 100):
		print("Entrada:", int(c))
		print("Animal: Garoupa")
else: 
	print("Entrada:", int(c))
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:14:10) 
-- CODE:
c = input("Valor da cedula: ")
if((c != 2) or (c != 5) or (c != 10) or (c != 20) or (c != 50) or (c != 100)):
	print("Entrada:", int(c))
	print("Animal: invalido")
elif(c == 2):
	print("Entrada:", int(c))
	print("Animal: Tartaruga")
elif(c == 5):
	print("Entrada:", int(c))
	print("Animal: Garça")
elif(c == 10):
	print("Entrada:", int(c))
	print("Animal: Arara")
elif(c == 20):
	print("Entrada:", int(c))
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Entrada:", int(c))
	print("Animal: Onca-pintada")
else:
	print("Entrada:", int(c))
	print("Animal: Garoupa")

	

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:17:43) 
-- CODE:
c = input("Valor da cedula: ")
if(not(c == 2) or not (c == 5) or not (c == 10) or not (c == 20) or not (c == 50) or not (c == 100)):
	print("Entrada:", int(c))
	print("Animal: invalido")
elif(c == 2):
	print("Entrada:", int(c))
	print("Animal: Tartaruga")
elif(c == 5):
	print("Entrada:", int(c))
	print("Animal: Garça")
elif(c == 10):
	print("Entrada:", int(c))
	print("Animal: Arara")
elif(c == 20):
	print("Entrada:", int(c))
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Entrada:", int(c))
	print("Animal: Onca-pintada")
else:
	print("Entrada:", int(c))
	print("Animal: Garoupa")

	

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:19:04) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(not(c == 2) or not (c == 5) or not (c == 10) or not (c == 20) or not (c == 50) or not (c == 100)):
	print("Animal: invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garça")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

	

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:19:25) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(not(c == 2) or not (c == 5) or not (c == 10) or not (c == 20) or not (c == 50) or not (c == 100)):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garça")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

	

-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 20:19:38) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(not(c == 2) or not (c == 5) or not (c == 10) or not (c == 20) or not (c == 50) or not (c == 100)):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garça")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

	

-- EXECUTION TIME:
0.206791
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:20:17) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(not(c == 2) or not (c == 5) or not (c == 10) or not (c == 20) or not (c == 50) or not (c == 100)):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garça")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

	

-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:39:18) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(not c == 2 or not c == 5 or not c == 10 or not c == 20 or not c == 50 or not c == 100):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garça")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

	

-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 20:46:38) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(not c == 2 or not c == 5 or not c == 10 or not c == 20 or not c == 50 or not c == 100):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

	

-- EXECUTION TIME:
0.146924
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 21:06:53) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(not c == 2 or not c == 5 or not c == 10 or not c == 20 or not c == 50 or not c == 100):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

	

-- EXECUTION TIME:
0.163142
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Valor da cedula: Entrada: 100
Animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Valor da cedula: Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Valor da cedula: Entrada: 50
Animal: Invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 21:06:58) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(not c == 2 or not c == 5 or not c == 10 or not c == 20 or not c == 50 or not c == 100):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

	

-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 21:10:38) 
-- CODE:
print(10)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 21:10:49) 
-- CODE:
print(10)
-- EXECUTION TIME:
0.167836
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
10
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
10
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 21:13:45) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(not c == 2 or not c == 5 or not c == 10 or not c == 20 or not c == 50 or not c == 100):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 21:16:07) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(not c == "2" or not c == "5" or not c == "10" or not c == "20" or not c == "50" or not c == "100"):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 21:18:00) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(c != "2" or not c != "5" or not c != "10" or not c != "20" or not c != "50" or not c != "100"):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 21:18:25) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(c != "2" or not c != "5" or not c != "10" or not c != "20" or not c != "50" or not c != "100"):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

-- EXECUTION TIME:
0.172721
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 23:31:50) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(c != "2" or not c != "5" or not c != "10" or not c != "20" or not c != "50" or not c != "100"):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 23:32:00) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(c != "2" or not c != "5" or not c != "10" or not c != "20" or not c != "50" or not c != "100"):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:18:07) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(c != 2 or c != 5 or c != 10 or c != 20 or c != 50 or c != 100):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:28:36) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(not (c == 2) or not (c == 5) or not (c == 10) or not (c == 20) or not (c == 50) or not (c == 100)):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:34:09) 
-- CODE:
c = int(input("Valor da cedula: "))
print("Entrada:", c)
if(not (c == 2) or not (c == 5) or not (c == 10) or not (c == 20) or not (c == 50) or not (c == 100)):
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:34:36) 
-- CODE:
c = int(input("Valor da cedula: "))
if(not (c == 2) or not (c == 5) or not (c == 10) or not (c == 20) or not (c == 50) or not (c == 100)):
	print("Entrada:", c)
	print("Animal: Invalido")
elif(c == 2):
	print("Animal: Tartaruga")
elif(c == 5):
	print("Animal: Garca")
elif(c == 10):
	print("Animal: Arara")
elif(c == 20):
	print("Animal: Mico-leao-dourado")
elif(c == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")

-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 13:00:03) 
-- CODE:
c = int(input("Valor da cedula: "))
if(c == 2):
	a = "Tartaruga"
elif(c == 5):
	a = "Garca"
elif(c == 10):
	a = "Arara)
elif(c == 20):
	a = "Mico-leao-dourado"
elif(c == 50):
	a = "Onca-pintada"
elif(c == 100):
	a = "Garoupa"
else: 
	a = "Invalido"
print("Entrada", c)
print("Animal:", a)
-- ERROR:
File "XXXX", line 7
    a = "Arara)
              ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 13:00:18) 
-- CODE:
c = int(input("Valor da cedula: "))
if(c == 2):
	a = "Tartaruga"
elif(c == 5):
	a = "Garca"
elif(c == 10):
	a = "Arara")
elif(c == 20):
	a = "Mico-leao-dourado"
elif(c == 50):
	a = "Onca-pintada"
elif(c == 100):
	a = "Garoupa"
else: 
	a = "Invalido"
print("Entrada", c)
print("Animal:", a)
-- ERROR:
File "XXXX", line 7
    a = "Arara")
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 13:00:27) 
-- CODE:
c = int(input("Valor da cedula: "))
if(c == 2):
	a = "Tartaruga"
elif(c == 5):
	a = "Garca"
elif(c == 10):
	a = "Arara"
elif(c == 20):
	a = "Mico-leao-dourado"
elif(c == 50):
	a = "Onca-pintada"
elif(c == 100):
	a = "Garoupa"
else: 
	a = "Invalido"
print("Entrada", c)
print("Animal:", a)
-- OUTPUT:
Entrada 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 13:00:36) 
-- CODE:
c = int(input("Valor da cedula: "))
if(c == 2):
	a = "Tartaruga"
elif(c == 5):
	a = "Garca"
elif(c == 10):
	a = "Arara"
elif(c == 20):
	a = "Mico-leao-dourado"
elif(c == 50):
	a = "Onca-pintada"
elif(c == 100):
	a = "Garoupa"
else: 
	a = "Invalido"
print("Entrada", c)
print("Animal:", a)
-- EXECUTION TIME:
0.115086
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 13:01:19) 
-- CODE:
c = int(input("Valor da cedula: "))
if(c == 2):
	a = "Tartaruga"
elif(c == 5):
	a = "Garça"
elif(c == 10):
	a = "Arara"
elif(c == 20):
	a = "Mico-leao-dourado"
elif(c == 50):
	a = "Onca-pintada"
elif(c == 100):
	a = "Garoupa"
else: 
	a = "Invalido"
	
print("Entrada", c)
print("Animal:", a)
-- EXECUTION TIME:
0.144223
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 13:03:05) 
-- CODE:
c = int(input("Valor da cedula: "))
if(c == 2):
	a = "Tartaruga"
elif(c == 5):
	a = "Garca"
elif(c == 10):
	a = "Arara"
elif(c == 20):
	a = "Mico-leao-dourado"
elif(c == 50):
	a = "Onca-pintada"
elif(c == 100):
	a = "Garoupa"
else: 
	a = "Invalido"
	
print("Entrada:", c)
print("Animal:", a)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 13:03:12) 
-- CODE:
c = int(input("Valor da cedula: "))
if(c == 2):
	a = "Tartaruga"
elif(c == 5):
	a = "Garca"
elif(c == 10):
	a = "Arara"
elif(c == 20):
	a = "Mico-leao-dourado"
elif(c == 50):
	a = "Onca-pintada"
elif(c == 100):
	a = "Garoupa"
else: 
	a = "Invalido"
	
print("Entrada:", c)
print("Animal:", a)
-- EXECUTION TIME:
0.12618
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
